<resources>
    <string name="app_name">Fant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gjestebruker</string>
    <string name="nav_header_subtitle">Logg på for å få tilgang til meir funksjonalitet!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Heim</string>
    <string name="menu_market">Marked</string>
    <string name="menu_item">Annonse</string>
    <string name="menu_create">Opprett annonse</string>
    <string name="menu_login">Logg på</string>

    <string name="thumbnail_item_placeholder">Thumbnail of item</string>
    <string name="image_item_placeholder">Image of item for sale</string>

    <string name="item_title">Imported Goods</string>
    <string name="action_item_purchase">Utfør kjøp</string>
    <string name="currency_suffix"> kr</string>
    <string name="seller_title">Selger</string>
    <string name="seller_name_placeholder">Privat selger</string>
    <string name="seller_email_placeholder"></string>
    <string name="sold_text">Solgt</string>


    <string name="mock_seller_name">Jan Banan</string>
    <string name="mock_seller_email">asdasdfgasfd@asdasdd.no</string>
    <string name="mock_item_description">
        asdfsadfasd saf dsaf saf asdf sadf sdaf asdf daf sadf asdaf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        sad fsaf dsaf dsaf ghfsg sadfadsf asdfasdf asdfasdf safasdf sadf dasf  asdfadsf asdf asdf
        Og så slutten
    </string>

    <string name="title_activity_login">Pålogging</string>
    <string name="prompt_email">E-post</string>
    <string name="prompt_password">Passord</string>
    <string name="action_sign_in">Logg på brukaren din</string>
    <string name="action_sign_in_short">Logg på</string>
    <string name="welcome">"Velkommen, du er no pålogga!"</string>
    <string name="invalid_username">Ugyldig brukarnamn</string>
    <string name="invalid_password">Passordet må innehald meir enn 5 tegn</string>
    <string name="login_failed">Pålogging feila</string>
    <string name="seller_mail_hidden_placeholder">Logg på for å vise kontaktinformasjon</string>


    <string name="message_purchase_wait">Vent litt, gjennomfører kjøp...</string>
    <string name="message_success">Suksess!</string>
    <string name="message_purchase_failed_invaliditem">Fant ikkje annonse, restart appen!</string>
    <string name="message_purchase_failed_purchasedbefore">Beklagar, annonsen er allerede kjøpt</string>
    <string name="message_purchase_failed_already_seller">Som selger kan du ikkje kjøpe eigne annonser</string>

    <string name="devel_byline_text"><![CDATA[Fant Marked versjon 1.1.2]]></string>
    <string name="application_brand_name">Fant Marked</string>
    <string name="application_brand_slogan">Selg det som er kjekt å ha</string>
    <string name="main_button_create_item">Legg ut ei ny annonse</string>
    <string name="main_button_logon_user">Logg på med din brukar</string>
    <string name="main_button_goto_market">Besøk torget</string>

    <string name="item_sold_to_prefix">\"Solgt til \"</string>
    <string name="item_purchased_on_message">Kjøpt den </string>

    <string name="createitem_message_waiting">Vent litt, lagar annonse....</string>
    <string name="createitem_message_created_item">Lagde annonse for </string>
    <string name="createitem_message_failed_to_add_descr">, men klarte ikkje sette beskrivelse</string>
    <string name="createitem_invalid_form_message">Sjekk at du har skrive gyldig tittel og pris</string>
    <string name="createitem_network_error_message">Feil med nettverksforbindelsen, sjekk tilkoblinga</string>
    <string name="createitem_crash_error_message">Programfeil, prøv igjen seinare</string>
    <string name="createitem_invalid_form_title_or_price">Tittel eller pris er ugyldig</string>
    <string name="createitem_form_name">Namn</string>
    <string name="createitem_form_price">Salgspris</string>
    <string name="createitem_form_description">Beskrivelse</string>
    <string name="createitem_from_ok_add_button">Legg ut</string>
    <string name="createitem_from_abort_button">Gå tilbake</string>
    <string name="main_button_logout">Logg av</string>
</resources>